Add Analytics function widgets

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -1224,6 +1224,166 @@ Resources:
                     }
                   }
                 }
+              },
+
+              {
+                "height": 4,
+                "width": 6,
+                "y": 0,
+                "x": 12,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Invocations", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Invocations" } ],
+                    [ "AWS/Lambda", "Errors", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "BigQuery Health",
+                  "period": 60,
+                  "liveData": true,
+                  "stat": "Sum"
+                }
+              },
+              {
+                "height": 4,
+                "width": 6,
+                "y": 0,
+                "x": 18,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Average", "stat": "Average" } ],
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Max", "stat": "Max" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "BigQuery Duration",
+                  "period": 60,
+                  "liveData": true
+                }
+              },
+
+              {
+                "height": 4,
+                "width": 6,
+                "y": 4,
+                "x": 12,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Invocations", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Invocations" } ],
+                    [ "AWS/Lambda", "Errors", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "DDB Health",
+                  "period": 60,
+                  "liveData": true,
+                  "stat": "Sum"
+                }
+              },
+              {
+                "height": 4,
+                "width": 6,
+                "y": 4,
+                "x": 18,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Average", "stat": "Average" } ],
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Max", "stat": "Max" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "DDB Duration",
+                  "period": 60,
+                  "liveData": true
+                }
+              },
+
+              {
+                "height": 4,
+                "width": 6,
+                "y": 8,
+                "x": 12,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Invocations", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Invocations" } ],
+                    [ "AWS/Lambda", "Errors", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "Pingbacks Health",
+                  "period": 60,
+                  "liveData": true,
+                  "stat": "Sum"
+                }
+              },
+              {
+                "height": 4,
+                "width": 6,
+                "y": 8,
+                "x": 18,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Average", "stat": "Average" } ],
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Max", "stat": "Max" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "Pingbacks Duration",
+                  "period": 60,
+                  "liveData": true
+                }
+              },
+
+              {
+                "height": 4,
+                "width": 6,
+                "y": 12,
+                "x": 12,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Invocations", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Invocations" } ],
+                    [ "AWS/Lambda", "Errors", "FunctionName", "${AnalyticsRedisFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "Redis Health",
+                  "period": 60,
+                  "liveData": true,
+                  "stat": "Sum"
+                }
+              },
+              {
+                "height": 4,
+                "width": 6,
+                "y": 12,
+                "x": 18,
+                "type": "metric",
+                "properties": {
+                  "metrics": [
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Average", "stat": "Average" } ],
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Max", "stat": "Max" } ]
+                  ],
+                  "view": "timeSeries",
+                  "stacked": false,
+                  "region": "${AWS::Region}",
+                  "title": "Redis Duration",
+                  "period": 60,
+                  "liveData": true
+                }
               }
             ]
           }
