--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -1255,7 +1255,7 @@ Resources:
                 "properties": {
                   "metrics": [
                     [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Average", "stat": "Average" } ],
-                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Max", "stat": "Max" } ]
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsBigqueryFunction}", { "label": "Max", "stat": "Maximum" } ]
                   ],
                   "view": "timeSeries",
                   "stacked": false,
@@ -1295,7 +1295,7 @@ Resources:
                 "properties": {
                   "metrics": [
                     [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Average", "stat": "Average" } ],
-                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Max", "stat": "Max" } ]
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsDynamoDbFunction}", { "label": "Max", "stat": "Maximum" } ]
                   ],
                   "view": "timeSeries",
                   "stacked": false,
@@ -1335,7 +1335,7 @@ Resources:
                 "properties": {
                   "metrics": [
                     [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Average", "stat": "Average" } ],
-                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Max", "stat": "Max" } ]
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsPingbacksFunction}", { "label": "Max", "stat": "Maximum" } ]
                   ],
                   "view": "timeSeries",
                   "stacked": false,
@@ -1375,7 +1375,7 @@ Resources:
                 "properties": {
                   "metrics": [
                     [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Average", "stat": "Average" } ],
-                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Max", "stat": "Max" } ]
+                    [ "AWS/Lambda", "Duration", "FunctionName", "${AnalyticsRedisFunction}", { "label": "Max", "stat": "Maximum" } ]
                   ],
                   "view": "timeSeries",
                   "stacked": false,
