--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -638,6 +638,125 @@ Resources:
         - { Key: prx:dev:application, Value: Feeder }
       TaskRoleArn: !GetAtt TaskRole.Arn
 
+  AuthProxyHttpApi:
+    Type: AWS::Serverless::HttpApi
+    Properties:
+      Description: !Sub Feeder ${EnvironmentType} private feed proxy service
+      DisableExecuteApiEndpoint: false
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Feeder
+  AuthProxyHttpLambdaFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Description: !Sub Feeder ${EnvironmentType} private feed proxy server
+      Environment:
+        Variables:
+          S3_BUCKET: !If [IsProduction, prx-feed, staging-prx-feed]
+      Events:
+        ApiRootRequest:
+          Properties:
+            ApiId: !Ref ProxyHttpApi
+            Method: any
+            Path: /
+            PayloadFormatVersion: "1.0"
+          Type: HttpApi
+        ApiDeepRequest:
+          Properties:
+            ApiId: !Ref ProxyHttpApi
+            Method: any
+            Path: /{proxy+}
+            PayloadFormatVersion: "1.0"
+          Type: HttpApi
+      Handler: index.handler
+      InlineCode: |
+        const AWS = require('aws-sdk');
+        const s3 = new AWS.S3();
+
+        // lightweight json logger
+        function log(level, msg, extra = {}) {
+          console[level](JSON.stringify({ level, msg, ...extra }));
+        }
+
+        exports.handler = async (event) => {
+          // TODO: everything
+          console.log(JSON.stringify(event));
+          return {
+            statusCode: 404,
+            body: 'todo',
+            headers: {
+              'Content-Type': 'text/plain',
+              'Cache-Control': 'public, max-age=0'
+            }
+          };
+        };
+      MemorySize: 192
+      Runtime: nodejs14.x
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:application: Feeder
+      Timeout: 30
+  AuthProxyHttpLambdaLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${AuthProxyHttpLambdaFunction}
+      RetentionInDays: 14
+  AuthProxyHttpLambdaLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref AuthProxyHttpLambdaLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Feeder }
+  AuthProxyHttpLambdaElevatedErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Condition: IsProduction
+    Properties:
+      AlarmName: !Sub WARN [Feeder Proxy] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS (${RootStackName})
+      AlarmDescription: !Sub >-
+        ${EnvironmentType} Feeder Private Feed Proxy Lambda function is failing.
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref AuthProxyHttpLambdaFunction
+      EvaluationPeriods: 1
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: 60
+      Statistic: Sum
+      Threshold: 0
+      TreatMissingData: notBreaching
+  ProxyHttpLambdaElevatedErrorAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt AuthProxyHttpLambdaElevatedErrorAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Feeder }
+
 Outputs:
   WebTargetGroupFullName:
     Value: !GetAtt WebTargetGroup2.TargetGroupFullName
