--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -7,6 +7,7 @@
 # prefix; if the stems change in other the template or the app config, things
 # will not function as expected.
 AWSTemplateFormatVersion: "2010-09-09"
+Transform: AWS::Serverless-2016-10-31
 
 Description: >-
   Creates a dedicated load balancer and the ECS service for the public Feeder
@@ -661,14 +662,14 @@ Resources:
       Events:
         ApiRootRequest:
           Properties:
-            ApiId: !Ref ProxyHttpApi
+            ApiId: !Ref AuthProxyHttpApi
             Method: any
             Path: /
             PayloadFormatVersion: "1.0"
           Type: HttpApi
         ApiDeepRequest:
           Properties:
-            ApiId: !Ref ProxyHttpApi
+            ApiId: !Ref AuthProxyHttpApi
             Method: any
             Path: /{proxy+}
             PayloadFormatVersion: "1.0"
