--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -651,6 +651,7 @@ Resources:
         prx:cloudformation:root-stack-name: !Ref RootStackName
         prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: Dovetail
         prx:dev:application: Feeder
   AuthProxyHttpLambdaFunction:
     Type: AWS::Serverless::Function
@@ -705,6 +706,7 @@ Resources:
         prx:cloudformation:root-stack-name: !Ref RootStackName
         prx:cloudformation:root-stack-id: !Ref RootStackId
         prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: Dovetail
         prx:dev:application: Feeder
       Timeout: 30
   AuthProxyHttpLambdaLogGroup:
@@ -724,6 +726,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Feeder }
   AuthProxyHttpLambdaElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -756,6 +759,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Feeder }
 
 Outputs:
