--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -659,7 +659,7 @@ Resources:
       Description: !Sub Feeder ${EnvironmentType} private feed proxy server
       Environment:
         Variables:
-          S3_BUCKET: !If [IsProduction, prx-feed, staging-prx-feed]
+          PUBLIC_FEED_DOMAIN: !If [IsProduction, f.prxu.org, f-staging.prxu.org]
       Events:
         ApiRootRequest:
           Properties:
@@ -765,3 +765,7 @@ Resources:
 Outputs:
   WebTargetGroupFullName:
     Value: !GetAtt WebTargetGroup2.TargetGroupFullName
+  AuthApiDefaultEndpoint:
+    Value: !Sub https://${AuthProxyHttpApi}.execute-api.${AWS::Region}.amazonaws.com
+  AuthApiId:
+    Value: !Ref AuthProxyHttpApi
