Add p.prxu.org cert validation records

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -281,3 +281,15 @@ Resources:
             - _2fdbae4e9cb7f56df7aae0f860e1109f.xtsdcrbgyf.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+        # p.prxu.org
+        - Name: !Sub _949367944f337d1533f87b3f22110df2.p.${Domain}
+          ResourceRecords:
+            - _08b85a90ab488a71951651419b0352ac.yqdvztwmqr.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
+        # p.staging.prxu.org
+        - Name: !Sub _3a1d9324ba782f9c8a05b8099d8e4472.p.staging.${Domain}
+          ResourceRecords:
+            - _eda5669d36d76ac7e538f2e157e30d94.yqdvztwmqr.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
