--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -219,6 +219,7 @@ Resources:
       DovetailRouterHostname: !If [IsProduction, dovetail.prxu.org, dovetail.staging.prxu.org]
       ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
+      FeederAuthProxyHostname: !If [IsProduction, p.prxu.org, p.staging.prxu.org]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
