Pass hostname to Feeder stack

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -51,6 +51,7 @@ Parameters:
   DovetailRouterHostname: { Type: String }
   IdHostname: { Type: String }
   BetaHostname: { Type: String }
+  FeederAuthProxyHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
