--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -685,6 +685,7 @@ Resources:
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         FeederHostname: !GetAtt Constants.FeederHostname
+        FeederAuthProxyHostname: !GetAtt Constants.FeederAuthProxyHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
         NetworksHostname: !GetAtt Constants.NetworksHostname
