--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -56,6 +56,7 @@ Parameters:
   DovetailRouterHostname: { Type: String }
   ExchangeHostname: { Type: String }
   FeederHostname: { Type: String }
+  FeederAuthProxyHostname: { Type: String }
   IdHostname: { Type: String }
   MetricsHostname: { Type: String }
   NetworksHostname: { Type: String }
@@ -290,6 +291,7 @@ Resources:
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
         CmsHostname: !Ref CmsHostname
         DovetailRouterHostname: !Ref DovetailRouterHostname
+        FeederAuthProxyHostname: !Ref FeederAuthProxyHostname
         IdHostname: !Ref IdHostname
         BetaHostname: !Ref BetaHostname
       Tags:
