--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -23,6 +23,12 @@ Parameters:
   kWebApplicationPort:
     Type: Number
     Default: 3000
+  kInteralProdDomain:
+    Type: String
+    Default: p.u.prx.tech
+  kInteralStagDomain:
+    Type: String
+    Default: p.staging.u.prx.tech
   #######
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
@@ -762,6 +768,80 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Feeder }
+
+  ExternalCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: !Ref FeederAuthProxyHostname
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_the-world_search" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Feeder }
+      ValidationMethod: DNS
+
+  # Creates an association between p.[staging.]prxu.org and the
+  # API Gateway. This association can be created once per region.
+  # This association allows for a CNAME to be made between p.[staging.]prxu.org
+  # and p.[staging.]u.prx.tech, the latter of which provides latency-based
+  # routing for the app between regions.
+  ExternalDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Properties:
+      DomainName: !Ref FeederAuthProxyHostname
+      DomainNameConfigurations:
+        - CertificateArn: !Ref ExternalCertificate
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:cloudformation:root-stack-name: !Ref RootStackName
+        prx:cloudformation:root-stack-id: !Ref RootStackId
+        prx:ops:environment: !Ref EnvironmentType
+        prx:dev:family: Dovetail
+        prx:dev:application: Feeder
+  ExternalApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Properties:
+      ApiId: !Ref AuthProxyHttpApi
+      DomainName: !Ref ExternalDomainName
+      Stage: $default
+
+  # Creates DNS records for p.[staging.]u.prx.tech, which alias to the
+  # regional domain name for the domain association for search.theworld.org.
+  # This allows for p.[staging.].prxu.org to resolve to p.[staging.]u.prx.tech,
+  # and have p.[staging.]u.prx.tech return the IP for an endpoint that
+  # is associated with p.[staging.].prxu.org.
+  # There is no API Gateway domain association for p.[staging.]u.prx.tech
+  # itself, so that domain is not functional, in any way other than as a DNS
+  # CNAME target.
+  InternalDomainNameRecordSetGroup:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Record sets for auth proxy server API
+      HostedZoneName: prx.tech.
+      RecordSets:
+        - AliasTarget:
+            DNSName: !GetAtt ExternalDomainName.RegionalDomainName
+            EvaluateTargetHealth: true
+            HostedZoneId: !GetAtt ExternalDomainName.RegionalHostedZoneId
+          Name: !If [IsProduction, !Ref kInteralProdDomain, !Ref kInteralStagDomain]
+          Region: !Ref AWS::Region
+          SetIdentifier: !Ref AWS::StackName
+          Type: A
+        - AliasTarget:
+            DNSName: !GetAtt ExternalDomainName.RegionalDomainName
+            EvaluateTargetHealth: true
+            HostedZoneId: !GetAtt ExternalDomainName.RegionalHostedZoneId
+          Name: !If [IsProduction, !Ref kInteralProdDomain, !Ref kInteralStagDomain]
+          Region: !Ref AWS::Region
+          SetIdentifier: !Ref AWS::StackName
+          Type: AAAA
 
 Outputs:
   WebTargetGroupFullName:
