Add auth proxy CNAME records

--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -185,6 +185,24 @@ Resources:
           AliasTarget:
             DNSName: dqos2vqrtnmab.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+
+  AuthProxy:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Auth proxy
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - Name: !Sub p.${Domain}
+          ResourceRecords:
+            - p.u.prx.tech.
+          TTL: "3600"
+          Type: CNAME
+        - Name: !Sub p.staging.${Domain}
+          ResourceRecords:
+            - p.staging.u.prx.tech.
+          TTL: "3600"
+          Type: CNAME
+
   AwsAcmLegacyUsEast1:
     Type: AWS::Route53::RecordSetGroup
     Properties:
