Add The World Search hostname constants

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -225,6 +225,8 @@ Resources:
       NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
       RemixHostname: !If [IsProduction, www.prx.mx, remix.staging.prx.tech]
+      TheWorldSearchHostname: !If [IsProduction, search.theworld.org, search.staging.theworld.org]
+      TheWorldSearchInternalHostname: !If [IsProduction, search.theworld.prx.tech, search.staging.theworld.prx.tech]
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
 
