Pass The World Search hostnames to stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -40,6 +40,8 @@ Parameters:
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
   MetaHostname: { Type: String }
+  TheWorldSearchHostname: { Type: String }
+  TheWorldSearchInternalHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   SharedRedisClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
@@ -456,6 +458,8 @@ Resources:
         CodeS3ObjectKey: !Ref TheWorldSearchCodeS3ObjectKey
         TheWorldSearchGoogleCustomSearchEngineId: !Ref TheWorldSearchGoogleCustomSearchEngineId
         TheWorldSearchGoogleCustomSearchApiKey: !Ref TheWorldSearchGoogleCustomSearchApiKey
+        TheWorldSearchHostname: !Ref TheWorldSearchHostname
+        TheWorldSearchInternalHostname: !Ref TheWorldSearchInternalHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
