--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -26,6 +26,8 @@ Parameters:
   CodeS3ObjectKey: { Type: String }
   TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
   TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
+  TheWorldSearchHostname: { Type: String }
+  TheWorldSearchInternalHostname: { Type: String }
 
 Resources:
   ExternalCertificate:
