--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -576,6 +576,8 @@ Resources:
         FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetaHostname: !GetAtt Constants.MetaHostname
+        TheWorldSearchHostname: !GetAtt Constants.TheWorldSearchHostname
+        TheWorldSearchInternalHostname: !GetAtt Constants.TheWorldSearchInternalHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
