--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -1,4 +1,5 @@
 # stacks/apps/theworld-search.yml
+# 100A
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
@@ -9,13 +10,6 @@ Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Parameters:
-  kExternalDomain:
-    Type: String
-    Default: search.theworld.org
-  kInteralDomain:
-    Type: String
-    Default: search.theworld.prx.tech
-  ######
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
@@ -34,7 +28,7 @@ Resources:
     Type: AWS::CertificateManager::Certificate
     Condition: IsProduction
     Properties:
-      DomainName: !Ref kExternalDomain
+      DomainName: !Ref TheWorldSearchHostname
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_the-world_search" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -209,7 +203,7 @@ Resources:
     Type: AWS::ApiGatewayV2::DomainName
     Condition: IsProduction # Production only
     Properties:
-      DomainName: !Ref kExternalDomain
+      DomainName: !Ref TheWorldSearchHostname
       DomainNameConfigurations:
         - CertificateArn: !Ref ExternalCertificate
       Tags:
@@ -248,7 +242,7 @@ Resources:
             DNSName: !GetAtt ExternalDomainName.RegionalDomainName
             EvaluateTargetHealth: true
             HostedZoneId: !GetAtt ExternalDomainName.RegionalHostedZoneId
-          Name: !Ref kInteralDomain
+          Name: !Ref TheWorldSearchInternalHostname
           Region: !Ref AWS::Region
           SetIdentifier: !Ref AWS::StackName
           Type: A
@@ -256,7 +250,7 @@ Resources:
             DNSName: !GetAtt ExternalDomainName.RegionalDomainName
             EvaluateTargetHealth: true
             HostedZoneId: !GetAtt ExternalDomainName.RegionalHostedZoneId
-          Name: !Ref kInteralDomain
+          Name: !Ref TheWorldSearchInternalHostname
           Region: !Ref AWS::Region
           SetIdentifier: !Ref AWS::StackName
           Type: AAAA
