Add Feeder constants

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -220,6 +220,7 @@ Resources:
       ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
       FeederAuthProxyHostname: !If [IsProduction, p.prxu.org, p.staging.prxu.org]
+      FeederAuthProxyInternalHostname: !If [IsProduction, p.u.prx.tech, p.staging.u.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
@@ -229,6 +230,7 @@ Resources:
       TheWorldSearchInternalHostname: !If [IsProduction, search.theworld.prx.tech, search.staging.theworld.prx.tech]
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
+      PublicFeedsHostname: !If [IsProduction, f.prxu.org, f-staging.prxu.org]
 
   SharedDatabaseSecurityGroupsStack:
     Type: AWS::CloudFormation::Stack
