Pass constants to stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -57,10 +57,12 @@ Parameters:
   ExchangeHostname: { Type: String }
   FeederHostname: { Type: String }
   FeederAuthProxyHostname: { Type: String }
+  FeederAuthProxyInternalHostname: { Type: String }
   IdHostname: { Type: String }
   MetricsHostname: { Type: String }
   NetworksHostname: { Type: String }
   PlayHostname: { Type: String }
+  PublicFeedsHostname: { Type: String }
   RemixHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
@@ -292,8 +294,10 @@ Resources:
         CmsHostname: !Ref CmsHostname
         DovetailRouterHostname: !Ref DovetailRouterHostname
         FeederAuthProxyHostname: !Ref FeederAuthProxyHostname
+        FeederAuthProxyInternalHostname: !Ref FeederAuthProxyInternalHostname
         IdHostname: !Ref IdHostname
         BetaHostname: !Ref BetaHostname
+        PublicFeedsHostname: !Ref PublicFeedsHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
