--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -58,6 +58,8 @@ Parameters:
   IdHostname: { Type: String }
   BetaHostname: { Type: String }
   FeederAuthProxyHostname: { Type: String }
+  FeederAuthProxyInternalHostname: { Type: String }
+  PublicFeedsHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
