--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -692,10 +692,12 @@ Resources:
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         FeederHostname: !GetAtt Constants.FeederHostname
         FeederAuthProxyHostname: !GetAtt Constants.FeederAuthProxyHostname
+        FeederAuthProxyInternalHostname: !GetAtt Constants.FeederAuthProxyInternalHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
         NetworksHostname: !GetAtt Constants.NetworksHostname
         PlayHostname: !GetAtt Constants.PlayHostname
+        PublicFeedsHostname: !GetAtt Constants.PublicFeedsHostname
         RemixHostname: !GetAtt Constants.RemixHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
