--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -208,6 +208,7 @@ Resources:
           - https://${SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}
           - SourceBucketName:
               Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
+      # Public application hostnames
       AuguryHostname: !If [IsProduction, augury.prx.org, augury.staging.prx.tech]
       BetaHostname: !If [IsProduction, beta.prx.org, beta.staging.prx.tech]
       CastleHostname: !If [IsProduction, castle.prx.tech, castle.staging.prx.tech]
@@ -220,14 +221,16 @@ Resources:
       ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
       FeederAuthProxyHostname: !If [IsProduction, p.prxu.org, p.staging.prxu.org]
-      FeederAuthProxyInternalHostname: !If [IsProduction, p.u.prx.tech, p.staging.u.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
       RemixHostname: !If [IsProduction, www.prx.mx, remix.staging.prx.tech]
       TheWorldSearchHostname: !If [IsProduction, search.theworld.org, search.staging.theworld.org]
+      # Internal application hostname
+      FeederAuthProxyInternalHostname: !If [IsProduction, p.u.prx.tech, p.staging.u.prx.tech]
       TheWorldSearchInternalHostname: !If [IsProduction, search.theworld.prx.tech, search.staging.theworld.prx.tech]
+      # Asset hostnames
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
       PublicFeedsHostname: !If [IsProduction, f.prxu.org, f-staging.prxu.org]
