Add staging search certificate validation record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -343,6 +343,12 @@ Resources:
             - _70056b05dc4fc317d096b16a68ee18bf.czrmfnbpdk.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+        #  search.staging.theworld.org
+        - Name: !Sub _df1dc0e03f30b4a2e7db90e278f598ac.search.staging.${Domain}
+          ResourceRecords:
+            - _59e41e3645125f53b21b2df2bfbd73b1.yqdvztwmqr.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
 
   AwsSes:
     Type: AWS::Route53::RecordSetGroup
