Add staging search DNS record

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -131,6 +131,11 @@ Resources:
             - search.theworld.prx.tech.
           TTL: "3600"
           Type: CNAME
+        - Name: !Sub search.staging.${Domain}
+          ResourceRecords:
+            - search.staging.theworld.prx.tech.
+          TTL: "3600"
+          Type: CNAME
 
   LetsEncrypt:
     Type: AWS::Route53::RecordSetGroup
