--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -467,15 +467,14 @@ Resources:
     Type: AWS::IAM::Policy
     Properties:
       PolicyDocument:
-        Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
+          - Action:
               - s3:AbortMultipartUpload
               - s3:ListMultipartUploadParts
               - s3:PutObject
-            Resource:
-              - !Sub ${AdFilesS3BucketArn}/upload/*
+            Effect: Allow
+            Resource: !Sub ${AdFilesS3BucketArn}/upload/*
+        Version: "2012-10-17"
       PolicyName: ExternalS3BucketAccess
       Users:
         - !Ref S3SigningUser
