Clean up alarm name

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -757,7 +757,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: !Sub WARN [Feeder Proxy] Lambda function <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS (${RootStackName})
+      AlarmName: !Sub WARN [Feeder] Private feed proxy <${EnvironmentTypeAbbreviation}> INVOCATIONS ERRORS (${RootStackName})
       AlarmDescription: !Sub >-
         ${EnvironmentType} Feeder Private Feed Proxy Lambda function is failing.
       ComparisonOperator: GreaterThanThreshold
