--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -193,11 +193,11 @@ Resources:
         - { Key: prx:dev:family, Value: The World }
         - { Key: prx:dev:application, Value: Search }
 
-  # Creates an association between search.theworld.org and the production
-  # API Gateway. This association can be created once per region.
-  # This association allows for a CNAME to be made between search.theworld.org
-  # and search.theworld.prx.tech, the latter of which provides latency-based
-  # routing for the app between regions.
+  # Creates an association between search.[staging.]theworld.org and the
+  # production API Gateway. This association can be created once per region.
+  # This association allows for a CNAME to be made between
+  # search.[staging.]theworld.org and search.[staging.]theworld.prx.tech, the
+  # latter of which provides latency-based routing for the app between regions.
   ExternalDomainName:
     Type: AWS::ApiGatewayV2::DomainName
     Properties:
@@ -220,14 +220,14 @@ Resources:
       DomainName: !Ref ExternalDomainName
       Stage: $default
 
-  # Creates DNS records for search.theworld.prx.tech, which alias to the
-  # regional domain name for the domain association for search.theworld.org.
-  # This allows for search.theworld.org to resolve to search.theworld.prx.tech,
-  # and have search.theworld.prx.tech return the IP for an endpoint that
-  # is associated with search.theworld.org.
-  # There is no API Gateway domain association for search.theworld.prx.tech
-  # itself, so that domain is not functional, in any way other than as a DNS
-  # CNAME target.
+  # Creates DNS records for search.[staging.]theworld.prx.tech, which alias to
+  # the regional domain name for the domain association for
+  # search.[staging.]theworld.org. This allows for search.theworld.org to
+  # resolve to search.[staging.]theworld.prx.tech, and have
+  # search.[staging.]theworld.prx.tech return the IP for an endpoint that is
+  # associated with search.[staging.]theworld.org. There is no API Gateway
+  # domain association for search.[staging.]theworld.prx.tech itself, so that
+  # domain is not functional, in any way other than as a DNS CNAME target.
   InternalDomainNameRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
     Properties:
