--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -233,3 +233,7 @@ Resources:
         # In the Thick
         - { Type: A, Name: !Sub "pf1221ittp.${Domain}", AliasTarget: { DNSName: "d3e6i5hvdtpnc3.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf1221ittp.${Domain}", AliasTarget: { DNSName: "d3e6i5hvdtpnc3.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # 1800 Days
+        - { Type: A, Name: !Sub "pf1800days.${Domain}", AliasTarget: { DNSName: "d1pkf8e6tr008z.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1800days.${Domain}", AliasTarget: { DNSName: "d1pkf8e6tr008z.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
