--- a/db/exchange-solr/solr-instance.yml
+++ b/db/exchange-solr/solr-instance.yml
@@ -39,7 +39,7 @@ Resources:
     Properties:
       CidrIp: 0.0.0.0/0
       Description: >-
-        Allows ingress traffic from all SSH traffic
+        Allows all inbound SSH traffic
       FromPort: 22
       GroupId: !GetAtt SolrInstanceSecurityGroup.GroupId
       IpProtocol: tcp
