--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -1,4 +1,5 @@
 # stacks/apps/castle.yml
+# 200A
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
@@ -380,6 +381,15 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Castle }
       VpcId: !Ref VpcId
+  PostgresSecurityGroupClientIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allows inbound traffic from DB client resources
+      FromPort: 5432
+      GroupId: !GetAtt PostgresSecurityGroup.GroupId
+      IpProtocol: tcp
+      SourceSecurityGroupId: !GetAtt PostgresClientSecurityGroup.GroupId
+      ToPort: 5432
 
   PostgresInstance:
     Type: AWS::RDS::DBInstance
@@ -442,6 +452,36 @@ Resources:
       Unit: Bytes
       TreatMissingData: notBreaching
 
+  # Resources that need access to the Castle DB (clients) belong to this
+  # security group. It allows traffic to the cluster security group.
+  # NOTE: This security group can only be used in stacks 300A and higher
+  PostgresClientSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: !Sub >-
+        ${EnvironmentType} Castle PostgreSQL client security group
+      Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_castle_postgresql-client" }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Castle }
+      VpcId: !Ref VpcId
+  PostgresClientSecurityGroupClusterEgress:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      Description: >-
+        Allow traffic to the Castle DB security group
+      DestinationSecurityGroupId: !GetAtt PostgresSecurityGroup.GroupId
+      FromPort: 5432
+      GroupId: !GetAtt PostgresClientSecurityGroup.GroupId
+      IpProtocol: tcp
+      ToPort: 5432
+
 Outputs:
   TargetGroupFullName:
     Value: !GetAtt TargetGroup.TargetGroupFullName
@@ -453,3 +493,5 @@ Outputs:
     Value: !Ref PostgresInstance
   QuicksightVpcSecurityGroupId:
     Value: !GetAtt QuicksightVpcSecurityGroup.GroupId
+  PostgresClientSecurityGroupId:
+    Value: !GetAtt PostgresClientSecurityGroup.GroupId
