Add Castle DB client security group to Augury Fargate tasks

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -43,6 +43,7 @@ Parameters:
   SharedAuroraPostgresqlPort: { Type: String }
   CastlePostgresInstanceEndpointAddress: { Type: String }
   CastlePostgresInstanceEndpointPort: { Type: String }
+  CastlePostgresClientSecurityGroupId: { Type: String }
   CastleHostname: { Type: String }
   CorporateHostname: { Type: String }
   ExchangeHostname: { Type: String }
@@ -107,6 +108,7 @@ Resources:
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         CastlePostgresInstanceEndpointAddress: !Ref CastlePostgresInstanceEndpointAddress
         CastlePostgresInstanceEndpointPort: !Ref CastlePostgresInstanceEndpointPort
+        CastlePostgresClientSecurityGroupId: !Ref CastlePostgresClientSecurityGroupId
         AdFilesHostname: !Ref AdFilesHostname
         FeederHostname: !Ref FeederHostname
         IdHostname: !Ref IdHostname
