--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -50,6 +50,7 @@ Parameters:
   SharedAuroraPostgresqlPort: { Type: String }
   CastlePostgresInstanceEndpointAddress: { Type: String }
   CastlePostgresInstanceEndpointPort: { Type: String }
+  CastlePostgresClientSecurityGroupId: { Type: String }
   AdFilesHostname: { Type: String }
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
@@ -704,6 +705,7 @@ Resources:
           SECURITY_GROUP_1: !GetAtt SlowWorkerSecurityGroup.GroupId
           SECURITY_GROUP_2: !Ref EcsLaunchEndpointsAccessSecurityGroupId
           SECURITY_GROUP_3: !Ref KmsEndpointAccessSecurityGroupId
+          SECURITY_GROUP_4: !Ref CastlePostgresClientSecurityGroupId
           STARTED_BY: !Ref AWS::StackName
           ENVIRONMENT_TYPE: !Ref EnvironmentType
           ROOT_STACK_ID: !Ref RootStackId
@@ -750,6 +752,7 @@ Resources:
                   process.env.SECURITY_GROUP_1,
                   process.env.SECURITY_GROUP_2,
                   process.env.SECURITY_GROUP_3,
+                  process.env.SECURITY_GROUP_4,
                 ],
               },
             },
