--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -799,6 +799,7 @@ Resources:
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         CastlePostgresInstanceEndpointAddress: !GetAtt Apps200AStack.Outputs.CastlePostgresInstanceEndpointAddress
         CastlePostgresInstanceEndpointPort: !GetAtt Apps200AStack.Outputs.CastlePostgresInstanceEndpointPort
+        CastlePostgresClientSecurityGroupId: !GetAtt Apps200AStack.Outputs.CastlePostgresClientSecurityGroupId
         CastleHostname: !GetAtt Constants.CastleHostname
         CorporateHostname: !GetAtt Constants.CorporateHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
