Use port parameters in DB security group rules

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -246,6 +246,8 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackName
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         SharedVpcCidrBlock: !Ref SharedVpcCidrBlock
+        SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
