--- a/stacks/shared-db-sg.yml
+++ b/stacks/shared-db-sg.yml
@@ -36,6 +36,8 @@ Parameters:
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
   SharedVpcCidrBlock: { Type: String }
+  SharedAuroraMysqlPort: { Type: String }
+  SharedAuroraPostgresqlPort: { Type: String }
 
 Resources:
   SharedMysqlClientSecurityGroup:
@@ -60,10 +62,10 @@ Resources:
       CidrIp: !Ref SharedVpcCidrBlock
       Description: !Sub >-
         Allows outbound Aurora MySQL traffic
-      FromPort: 3306
+      FromPort: !Ref SharedAuroraMysqlPort
       GroupId: !GetAtt SharedMysqlClientSecurityGroup.GroupId
       IpProtocol: tcp
-      ToPort: 3306
+      ToPort: !Ref SharedAuroraMysqlPort
 
   SharedPostgresqlClientSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -87,10 +89,10 @@ Resources:
       CidrIp: !Ref SharedVpcCidrBlock
       Description: !Sub >-
         Allows outbound Aurora PostgreSQL traffic
-      FromPort: 3306
+      FromPort: !Ref SharedAuroraPostgresqlPort
       GroupId: !GetAtt SharedPostgresqlClientSecurityGroup.GroupId
       IpProtocol: tcp
-      ToPort: 3306
+      ToPort: !Ref SharedAuroraPostgresqlPort
 
 Outputs:
   SharedMysqlClientSecurityGroupId:
