Add Augury Fargate tasks to shared PG client security group

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -41,6 +41,7 @@ Parameters:
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
+  SharedPostgresqlClientSecurityGroupId: { Type: String }
   CastlePostgresInstanceEndpointAddress: { Type: String }
   CastlePostgresInstanceEndpointPort: { Type: String }
   CastlePostgresClientSecurityGroupId: { Type: String }
@@ -106,6 +107,7 @@ Resources:
         KmsEndpointAccessSecurityGroupId: !Ref KmsEndpointAccessSecurityGroupId
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
+        SharedPostgresqlClientSecurityGroupId: !Ref SharedPostgresqlClientSecurityGroupId
         CastlePostgresInstanceEndpointAddress: !Ref CastlePostgresInstanceEndpointAddress
         CastlePostgresInstanceEndpointPort: !Ref CastlePostgresInstanceEndpointPort
         CastlePostgresClientSecurityGroupId: !Ref CastlePostgresClientSecurityGroupId
