--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -48,6 +48,7 @@ Parameters:
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
+  SharedPostgresqlClientSecurityGroupId: { Type: String }
   CastlePostgresInstanceEndpointAddress: { Type: String }
   CastlePostgresInstanceEndpointPort: { Type: String }
   CastlePostgresClientSecurityGroupId: { Type: String }
@@ -706,6 +707,7 @@ Resources:
           SECURITY_GROUP_2: !Ref EcsLaunchEndpointsAccessSecurityGroupId
           SECURITY_GROUP_3: !Ref KmsEndpointAccessSecurityGroupId
           SECURITY_GROUP_4: !Ref CastlePostgresClientSecurityGroupId
+          SECURITY_GROUP_5: !Ref SharedPostgresqlClientSecurityGroupId
           STARTED_BY: !Ref AWS::StackName
           ENVIRONMENT_TYPE: !Ref EnvironmentType
           ROOT_STACK_ID: !Ref RootStackId
@@ -753,6 +755,7 @@ Resources:
                   process.env.SECURITY_GROUP_2,
                   process.env.SECURITY_GROUP_3,
                   process.env.SECURITY_GROUP_4,
+                  process.env.SECURITY_GROUP_5,
                 ],
               },
             },
