Allow to work with application/rss

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -700,7 +700,7 @@ Resources:
           if (resp.statusCode !== 200) {
             return text(404, 'Not Found', 300);
           }
-          if (!(resp.headers['content-type'] || '').includes('application/rss+xml')) {
+          if (!(resp.headers['content-type'] || '').match(/application\/(rss\+)?xml/)) {
             return text(404, 'Not Feed', 300);
           }
 
