Use the defined name

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -551,7 +551,7 @@ Resources:
         actvitiy for an unusually long time. Inventory is slowly becoming stale.
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: 3
-      MetricName: ForecastDownloadsMetricFilter
+      MetricName: !Sub ForecastJobElapsed${EnvironmentType}
       Namespace: PRX/Augury
       Period: If [IsProduction, 300, 5400]
       Statistic: SampleCount
