--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -553,7 +553,7 @@ Resources:
       EvaluationPeriods: 3
       MetricName: !Sub ForecastJobElapsed${EnvironmentType}
       Namespace: PRX/Augury
-      Period: If [IsProduction, 300, 5400]
+      Period: !If [IsProduction, 300, 5400]
       Statistic: SampleCount
       Threshold: 1
       TreatMissingData: breaching
